--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
  <header>
-  <img class="cabecalho imagem" src=alurastart logo.png alt="logo da alura start">
+  <img class="cabecalho imagem" src="alurastart logo.png" alt="logo da alura start">
  <h1> Vai ser uma imagem aqui </h1>
  <ul>
     <li>Estudante</li>
