--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
  <header class="cabecalho">
   <img class="cabecalho imagem" src="alurastart logo.png" alt="logo da alura start">
     <ul class="cabecalho-Lista-item">
-    <li>Estudante</li>
-    <li>Escola</li>
+    <li class="cabecalho-Lista-item">Estudante</li>
+    <li class="cabecalho-Lista-item">Escola</li>
  </ul>
 </header>
 </body>
