--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  </ul>
 </header>
  <section>
-  <h2>class="Escola-titulo" Sobre a Escola</h2>
+  <h2 class="Escola-titulo"> Sobre a Escola</h2>
   <p class="escola-texto-um">A escola Alura foi fundada em 2018 com o objetivo de ensinar Pensamento Computacional através da programação</p>
   <p class="escola-texto-dois">A turma mais famosa é o 2B do Colegio Estadual Marechal Castelo Branco. Uma turma divertida e engajada as vezes,
     um pouco bagunceira, mas entrega excelentes resultados</p>
