--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p class="escola-texto-dois">A turma mais famosa é o 2 B, do Colégio Estadual Marechal 
             Castelo Branco. Uma turmna divertida e engajada, as vezez,
              um pouco bagunceira, mas entrega excelentes resultados. </p>
-             <img class="escola-imagem"src="Formula-bro(2).png" alt="professora no quadro">
+             <img class="escola-imagem"src="formula-bro(2).png" alt="professora no quadro">
              
     </section>
 </body>
