--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <div class="estudante-todos">
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Marcelo.jpeg" alt="foto do marcelo">
-                <h3 class="estudante-nome">Marcelo</h3>
+                <img class="estudante-imagem" src="" alt="foto da Sabrina">
+                <h3 class="estudante-nome">Sabrina</h3>
                 <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
                 <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="linkedin.png"
@@ -46,7 +46,7 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Gabi.jpg" alt="foto da gabi">
+                <img class="estudante-imagem" src="Gabi.jpg" alt="foto da Milena">
                 <h3 class="estudante-nome">Gabriela</h3>
                 <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
@@ -56,7 +56,7 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Liz.jpg" alt="foto da lizandra">
+                <img class="estudante-imagem" src="Liz.jpg" alt="foto do Alessandro">
                 <h3 class="estudante-nome">Lizandra</h3>
                 <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
@@ -68,7 +68,7 @@
             <span></span>
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Joice.jpg" alt="foto da joice">
+                <img class="estudante-imagem" src="Joice.jpg" alt="foto da Tais">
                 <h3 class="estudante-nome">Joice</h3>
                 <a href="https://github.com/JoiceAlura"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
@@ -78,7 +78,7 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Maria.jpg" alt="foto da maria">
+                <img class="estudante-imagem" src="Maria.jpg" alt="foto da Maria Eduarda">
                 <h3 class="estudante-nome">Maria</h3>
                 <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
