--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <span></span>
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Joice.jpg" alt="foto da Tais">
+                <img class="estudante-imagem" src="Joice.jpg" alt="foto da Tais ">
                 <h3 class="estudante-nome">Joice</h3>
                 <a href="https://github.com/JoiceAlura"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
@@ -88,7 +88,7 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Olivia.jpg" alt="foto da olhe">
+                <img class="estudante-imagem" src="Olivia.jpg" alt="foto da maria clara">
                 <h3 class="estudante-nome">Olivia</h3>
                 <img class="estudante-icone" src="github.png" alt="icone github">
                 <a href="https://www.linkedin.com/in/olhe/"><img class="estudante-icone" src="linkedin.png"
