--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
             <div class="estudante-div">
                 <img class="estudante-imagem" src="Gabi.jpg" alt="foto da Milena">
-                <h3 class="estudante-nome">Gabriela</h3>
+                <h3 class="estudante-nome">Milena</h3>
                 <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
                 <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="estudante-icone"
@@ -57,7 +57,7 @@
             </div>
             <div class="estudante-div">
                 <img class="estudante-imagem" src="Liz.jpg" alt="foto do Alessandro">
-                <h3 class="estudante-nome">Lizandra</h3>
+                <h3 class="estudante-nome">Alessandro</h3>
                 <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
                 <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone"
@@ -79,7 +79,7 @@
             </div>
             <div class="estudante-div">
                 <img class="estudante-imagem" src="Maria.jpg" alt="foto da Maria Eduarda">
-                <h3 class="estudante-nome">Maria</h3>
+                <h3 class="estudante-nome">Maria Eduarda</h3>
                 <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
                 <a href="https://www.linkedin.com/in/mariageovanna"><img class="estudante-icone" src="linkedin.png"
@@ -88,8 +88,8 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Olivia.jpg" alt="foto da maria clara">
-                <h3 class="estudante-nome">Olivia</h3>
+                <img class="estudante-imagem" src="Olivia.jpg" alt="foto da Maria clara">
+                <h3 class="estudante-nome">Maria clara</h3>
                 <img class="estudante-icone" src="github.png" alt="icone github">
                 <a href="https://www.linkedin.com/in/olhe/"><img class="estudante-icone" src="linkedin.png"
                         alt="icone linkedin"></a>
