--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             <span></span>
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Joice.jpg" alt="foto da Tais ">
-                <h3 class="estudante-nome">Joice</h3>
+                <img class="estudante-imagem" src="Joice.jpg" alt="foto da fabiola ">
+                <h3 class="estudante-nome">fabiola</h3>
                 <a href="https://github.com/JoiceAlura"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
                 <a href="https://www.linkedin.com/in/joicebarbaresco/"><img class="estudante-icone" src="linkedin.png"
