--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Gabi.jpg" alt="foto da Milena">
+                <img class="estudante-imagem" src="milena.jpg" alt="foto da Milena">
                 <h3 class="estudante-nome">Milena</h3>
                 <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
