--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="estudante-todos">
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="" alt="foto da Sabrina">
+                <img class="estudante-imagem" src="sabrinaAdam.jpg" alt="foto da Sabrina">
                 <h3 class="estudante-nome">Sabrina</h3>
                 <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
