--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Liz.jpg" alt="foto do Alessandro">
+                <img class="estudante-imagem" src="Alessandro.jpeg" alt="foto do Alessandro">
                 <h3 class="estudante-nome">Alessandro</h3>
                 <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
