--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <span></span>
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="" alt="foto d ">
+                <img class="estudante-imagem" src="" alt="foto da mavi bisso ">
                 <h3 class="estudante-nome">Rafaela</h3>
                 <a href="https://github.com/rafaelamunhoz12"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
