--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Maria.jpg" alt="foto da Maria Eduarda">
+                <img class="estudante-imagem" src="FB_IMG_1691430636259.jpg" alt="foto da Maria Eduarda">
                 <h3 class="estudante-nome">Maria Eduarda</h3>
                 <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
