--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <span></span>
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Joice.jpg" alt="foto da fabiola ">
+                <img class="estudante-imagem" src="Joice.jpg" alt="foto do tiago ">
                 <h3 class="estudante-nome">fabiola</h3>
                 <a href="https://github.com/JoiceAlura"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
