--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <span></span>
             <div class="estudante-div">
                 <img class="estudante-imagem" src="Minha foto.jpg" alt="foto do tiago ">
-                <h3 class="estudante-nome">fabiola</h3>
+                <h3 class="estudante-nome">tiago</h3>
                 <a href="https://github.com/JoiceAlura"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
                 <a href="https://www.linkedin.com/in/joicebarbaresco/"><img class="estudante-icone" src="linkedin.png"
@@ -88,7 +88,7 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Olivia.jpg" alt="foto da Maria clara">
+                <img class="estudante-imagem" src="" alt="foto da everlea">
                 <h3 class="estudante-nome">Maria clara</h3>
                 <img class="estudante-icone" src="github.png" alt="icone github">
                 <a href="https://www.linkedin.com/in/olhe/"><img class="estudante-icone" src="linkedin.png"
@@ -100,7 +100,7 @@
             <span></span>
             <div class="estudante-div">
                 <img class="estudante-imagem" src="mavi.bisso.webp" alt="foto da mavi bisso ">
-                <h3 class="estudante-nome">Rafaela</h3>
+                <h3 class="estudante-nome">mavi bisso</h3>
                 <a href="https://github.com/rafaelamunhoz12"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
                 <a href="http://linkedin.com/in/rafaela-felix-munhoz-oliveira-02160a10a"><img class="estudante-icone"
@@ -109,8 +109,8 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Thais.jpg" alt="foto da thais">
-                <h3 class="estudante-nome">Thais</h3>
+                <img class="estudante-imagem" src="" alt="foto d">
+                <h3 class="estudante-nome"></h3>
                 <a href="https://github.com/Thaispianucci"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
                 <a href="https://www.linkedin.com/in/thais-pianucci-benedicto-54a9a416/"><img class="estudante-icone"
