--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="" alt="foto da everlea">
-                <h3 class="estudante-nome">Maria clara</h3>
+                <img class="estudante-imagem" src="everlea.jpg" alt="foto da everlea">
+                <h3 class="estudante-nome">everlea</h3>
                 <img class="estudante-icone" src="github.png" alt="icone github">
                 <a href="https://www.linkedin.com/in/olhe/"><img class="estudante-icone" src="linkedin.png"
                         alt="icone linkedin"></a>
