--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="" alt="foto d">
-                <h3 class="estudante-nome"></h3>
+                <img class="estudante-imagem" src="" alt="foto do murilo">
+                <h3 class="estudante-nome">murilo</h3>
                 <a href="https://github.com/Thaispianucci"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
                 <a href="https://www.linkedin.com/in/thais-pianucci-benedicto-54a9a416/"><img class="estudante-icone"
