--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="" alt="foto do murilo">
+                <img class="estudante-imagem" src="Murilo.jpeg" alt="foto do murilo">
                 <h3 class="estudante-nome">murilo</h3>
                 <a href="https://github.com/Thaispianucci"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
