--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         alt="icone github"></a>
                 <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="linkedin.png"
                         alt="icone linkedin"></a>
-                <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png"
+                <a href="https://instagram.com/sabrina launa wagner adam"><img class="estudante-icone" src="instagram.png"
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
